fixed dark mode

--- a/src/Components/Layout/Layout.css
+++ b/src/Components/Layout/Layout.css
@@ -6,14 +6,15 @@
 .Layout .svg1 {
     position:  absolute;
     width: 700px;
-    right: 11%;
-    top: 25%;
-    z-index: -1;
+    right: 0%;
+    top: 15%;
+    z-index: 0;
 }
 .Layout .svg2 {
     position:  absolute;
     width: 600px;
-    left: 4%;
+    left: 0%;
     top: 75%;
-    z-index: -1;
+    z-index: 0;
 }
+
